# RosBeginner

./: Makefile  README.md  build.sh  installer.sh
Description/: CMakeLists.md  CMakeLists.txt  tf_transformation.md
Docs/: CMakeLists.txt  package.xml
Ros1/melodic/: melodic_version.sh
Ros1/versions/: melodic.sh
installer/: Makefile  README.md
installer/Ros1/kinetic/: kinetic_version.sh
installer/Ros1/neotic/: neotic_version.sh
installer/Ros2/ubuntu/: ubuntu_install.sh
installer/Ros2/windows/: windows_install.sh
installer/RosVersion1/: melodic_version.sh  noetic_version.sh
installer/RosVersion2/: humble_version.sh
projects/: README.md
projects/Principiante/: README.md
projects/ROS1/: README.md
projects/Ros1/: README.md
projects/Ros1/Principiante/: README.md
